--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-kjs": "browserify client/app.js -o public/app.js",
+    "build-js": "browserify client/app.js -o public/app.js",
     "start": "node server.js"
   },
   "repository": {
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/hecto932/chat-iojs#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "course": "0.0.1",
     "st": "^1.1.0",
-    "webrtc2images": "^1.4.4"
+    "webrtc2images": "^1.4.4",
+    "xhr": "^2.2.0"
   },
   "devDependencies": {
     "browserify": "^12.0.1"
