--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A realtime chat with video and gifs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run build-js",
     "build-js": "browserify client/app.js -o public/app.js",
     "start": "node server.js"
   },
