--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "postinstall": "npm run build-js",
-    "build-js": "browserify client/app.js -o public/app.js",
+    "build-js": "browserify -t hbsfy client/app.js -o public/app.js",
     "start": "node server.js"
   },
   "repository": {
@@ -24,12 +24,17 @@
     "concat-stream": "^1.5.1",
     "course": "0.0.1",
     "data-uri-to-buffer": "0.0.4",
+    "domify": "^1.4.0",
+    "handlebars": "^4.0.5",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "st": "^1.1.0",
     "uuid": "^2.0.1",
     "webrtc2images": "^1.4.4",
     "xhr": "^2.2.0"
   },
   "devDependencies": {
-    "browserify": "^12.0.1"
+    "browserify": "^12.0.1",
+    "hbsfy": "^2.4.1"
   }
 }
